--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1{
 }
 section{
     display: flex;
+    margin: 100px;
 }
 .half-widht{
     width: 50%;
@@ -34,4 +35,9 @@ padding: 20px;
 .top-banner{
     background-image: url(image/top-banner.png);
     background-repeat: no-repeat;
+}
+.become-a-hero{
+    background-image: url(image/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position:right ;
 }
