--- a/style.css
+++ b/style.css
@@ -72,3 +72,8 @@ padding: 20px;
  border-image: linear-gradient( black , yellow);
    border-image-slice: 1;
 }
+footer p{
+    color:white;
+    text-align: center;
+    background-color: darkblue;
+}
